--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-web = "4.11.0"
 actix-web-httpauth = "0.8.2"
 aws-config = "1.8.8"
 aws-sdk-sesv2 = "1.100.0"
+base64 = "0.22.1"
 env_logger = "0.11.8"
 handlebars = "6.3.2"
 log = "0.4.28"
