--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ base64 = "0.22.1"
 env_logger = "0.11.8"
 handlebars = "6.3.2"
 log = "0.4.28"
-markdown = "1.0.0"
+markdown = { version = "1.0.0", features = ["log"] }
 reqwest = "0.12.24"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
